Added author CSS

--- a/static/style.css
+++ b/static/style.css
@@ -456,6 +456,12 @@ img {
 .post-content iframe {
   max-width: 100%;
 }
+
+.post-content .author {
+  font-size: 80%;
+  color: var(--secondary);
+}
+
 .post-footer {
   margin-top: 56px;
 }
